# benefits-system

./: .gitignore  Makefile  README.md  docker-compose.yml
auths_domain/: .dockerignore  Dockerfile  Makefile  __init__.py  app.py  config.py  data-test.db  data.db  gunicorn_config  manage.py  pyproject.toml  swagger.yml  wsgi.py
auths_domain/api/: __init__.py  api.yml  config.py  data.db  mixins.py  models.py  routes.py  views.py
auths_domain/migrations/: env.py
auths_domain/migrations/versions/: 02b28feed507_.py  676891d47d6a_.py  6824fd237615_.py  f23bfb0da6a0_.py
auths_domain/test/: __init__.py  test_config.py
auths_domain/tests/: test_auth.py  test_config.py  test_models.py
auths_service/: Dockerfile  api.yml  app.py  pyproject.toml  setup.py
auths_service/api/: __init__.py  models.py
front/: .dockerignore  Dockerfile  Dockerfile.nginx  Makefile  app.py  gunicorn_config  manage.py  pyproject.toml  settings.py  urls.py  wsgi.py
front/api/: routes.py  views.py
front/nginx/: default.conf.template  run_nginx.sh
services/auths_domain/: Dockerfile  Makefile  __init__.py  data-test.db  manage.py  pyproject.toml  swagger.yml  wsgi.py
services/auths_domain/auths_domain/: __init__.py  models.py  routes.py
services/auths_domain/auths_domain/core/: __init__.py
services/auths_domain/auths_domain/migrations/dev/versions/: 04b6688b4482_.py
services/auths_domain/auths_domain/migrations/test/versions/: 67741461a86a_.py
services/auths_domain/auths_domain/tests/: test_config.py  test_models.py
