[tool.poetry]
name = "auths_service"
version = "0.1.0"
description = ""
authors = ["kadam <kadam@softserveinc.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pyjwt = "^1.7"
flask = "^1.1"
sqlalchemy = "^1.3"
cryptography = "^2.7"
flask_sqlalchemy = "^2.4"
flask_webtest = "^0.0.9"
connexion = "^2.3"
Flask-Injector = "=0.10.0"
fastavro = "^0.22.3"
injector = "=0.12.0"
CouchDB = "^1.2"
flask_cors = "^3.0"
bcrypt = "^3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
